--- a/1-index.html
+++ b/1-index.html
@@ -23,7 +23,7 @@
             </div>
             <nav class="header__nav">
                 <ul id="myLinks" class="header__nav--list">
-                    <li class="header__nav--item"><a href="#">What we do</a></li>
+                    <li class="header__nav--item"><a href="#whatwedo">What we do</a></li>
                     <li class="header__nav--item"><a href="#">Our results</a></li>
                     <li class="header__nav--item"><a href="#">Contact us</a></li>
                 </ul>
@@ -40,7 +40,7 @@
                 tempore voluptatem aperiam tenetur, officia libero eligendi.</p>
         </div>
     </section>
-    <section class="whatwedo">
+    <section id="whatwedo" class="whatwedo">
         <div class="whatwedo__text">
             <h2 class="whatwedo__text--title">What we do...</h2>
             <p class="whatwedo__text--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
